--- a/hr_dashboard.html
+++ b/hr_dashboard.html
@@ -279,7 +279,7 @@
                               <a href="hr_leave.html" class="btn btn-link">Detailed Attendance View</a>
                             </div>
                             <div class="attendance-card-body">
-                              <div class="row">
+                              <div class="row mb-3">
                                 <div class="col">
                                   <h6>Present</h6>
                                   <h4 class="f-w-600">13</h4>
@@ -321,10 +321,10 @@
                                 </div>
                               </div>
                             </div> -->
-                            <div class="p-4">
+                            <!-- <div class="p-4">
                               <button class="btn btn-outline-light btn-sm">Upcoming leaves in 7 days: 0<span class="btn btn-link">></span> </button>
                               <button class="btn btn-outline-light btn-sm">Daily Work Entries (0)<span class="btn btn-link">></span>                            </button>
-                            </div>
+                            </div> -->
                           </div>
                         
                     <div class="mt-4">
@@ -404,7 +404,7 @@
                                   <th>Half Day</th>
                                   <th>Paid Leave</th>
                                   <th>Unmarked</th>
-                                  <th>Fine</th>
+                                  <th>Comp Off</th>
                                   <th>Total Attendance</th>
                                 </tr>
                               </thead>
