--- a/hr_staffSalary.html
+++ b/hr_staffSalary.html
@@ -468,7 +468,7 @@
                                                             <h6>Due Amount : ₹ 0</h6>
                                                         </div>
                                                         <div class="col-4 text-right">
-                                                            <p class="text-primary">View variable</p>
+                                                            <!-- <p class="text-primary">View variable</p> -->
                                                         </div>
                                                     </div>
                                                 </div>
