--- a/bill.html
+++ b/bill.html
@@ -138,59 +138,70 @@
                   <div class="main-navbar">
                     <!-- <div class="left-arrow" id="left-arrow"><i data-feather="arrow-left"></i></div> -->
                     <div id="mainnav">
-                      <ul class="nav-menu custom-scrollbar">
-                        <li class="back-btn">
-                          <div class="mobile-back text-end">
-                            <span>Back</span><i class="fa fa-angle-right ps-2" aria-hidden="true"></i>
-                          </div>
-                        </li>
-                        <li class="dropdown">
-                          <a class="nav-link menu-title" href="javascript:void(0)"><i
-                              data-feather="home"></i><span>Candidate</span></a>
-                          <ul class="nav-submenu menu-content">
-                            <li><a href="dashboard.html">Inquiry</a></li>
-                            <li><a href="batchCreation.html">Batch Creation</a></li>
-                            <li><a href="batchList.html">Batch List</a></li>
-                            <li><a href="statusList.html">Candidate</a></li>
-                            <li><a href="attedance.html">Attendance</a></li>
-                          </ul>
-                        </li>
-                        <li class="dropdown">
-                          <a class="nav-link menu-title" href="javascript:void(0)"><i
-                              data-feather="user"></i><span>Master</span></a>
-                          <ul class="nav-submenu menu-content">
-                            <li><a href="center.html">Center</a></l i>
-                            <li><a href="course.html">Course</a></li>
-                            <li><a href="category.html">Category</a></li>
-                            <li><a href="career.html">Career</a></li>
-                            <li><a href="postion.html">Position</a></li>
-                          </ul>
-                        </li>
-                        <li class="dropdown">
-                          <a class="nav-link menu-title" href="javascript:void(0)"><i
-                              data-feather="user"></i><span>Account</span></a>
-                          <ul class="nav-submenu menu-content">
-                            <li><a href="vendor.html">Vendor</a></l i>
-                            <li><a href="bill.html">Bill</a></li>
-                            <li><a href="billApprove.html">Bill Approve</a></li>
-                            <li><a href="statistics.html">statistics</a></li>
-                            <li><a href="class.html">Class</a></li>
-                            <li><a href="hostel.html">Hostel</a></li>
-                          </ul>
-                        </li>
-                        <li class="dropdown">
-                          <a class="nav-link menu-title" href="javascript:void(0)"><i
-                              data-feather="grid"></i><span>Other</span></a>
-                          <ul class="nav-submenu menu-content">
-                            <li><a href="staff.html">Staff</a></li>
-                            <li><a href="tot.html">TOT</a></li>
-                            <li><a href="accreditation.html">accreditation</a></li>
-                            <li><a href="placement.html">Placement</a></li>
-                          </ul>
-                        </li>
-        
-                      </ul>
-                    </div>
+                        <ul class="nav-menu custom-scrollbar">
+                          <li class="back-btn">
+                            <div class="mobile-back text-end">
+                              <span>Back</span><i class="fa fa-angle-right ps-2" aria-hidden="true"></i>
+                            </div>
+                          </li>
+                          <li class="dropdown">
+                            <a class="nav-link menu-title" href="javascript:void(0)"><i
+                                data-feather="home"></i><span>Candidate</span></a>
+                            <ul class="nav-submenu menu-content">
+                              <li><a href="dashboard.html">Inquiry</a></li>
+                              <li><a href="batchCreation.html">Batch Creation</a></li>
+                              <li><a href="batchList.html">Batch List</a></li>
+                              <li><a href="statusList.html">Candidate</a></li>
+                              <li><a href="attedance.html">Attendance</a></li>
+                            </ul>
+                          </li>
+                          <li class="dropdown">
+                            <a class="nav-link menu-title" href="javascript:void(0)"><i
+                                data-feather="user"></i><span>Master</span></a>
+                            <ul class="nav-submenu menu-content">
+                              <li><a href="center.html">Center</a></l i>
+                              <li><a href="course.html">Course</a></li>
+                              <li><a href="category.html">Category</a></li>
+                              <li><a href="career.html">Career</a></li>
+                              <li><a href="postion.html">Position</a></li>
+                              <li><a href="stock.html">Stock</a></li>
+                            </ul>
+                          </li>
+                          <li class="dropdown">
+                            <a class="nav-link menu-title" href="javascript:void(0)"><i
+                                data-feather="user"></i><span>Account</span></a>
+                            <ul class="nav-submenu menu-content">
+                              <li><a href="vendor.html">Vendor</a></l i>
+                              <li><a href="bill.html">Bill</a></li>
+                              <li><a href="billApprove.html">Bill Approve</a></li>
+                              <li><a href="statistics.html">statistics</a></li>
+                              <li><a href="class.html">Class</a></li>
+                              <li><a href="hostel.html">Hostel</a></li>
+                            </ul>
+                          </li>
+                          <li class="dropdown">
+                            <a class="nav-link menu-title" href="javascript:void(0)"><i
+                                data-feather="grid"></i><span>Other</span></a>
+                            <ul class="nav-submenu menu-content">
+                              <li><a href="staff.html">Staff</a></li>
+                              <li><a href="tot.html">TOT</a></li>
+                              <li><a href="accreditation.html">accreditation</a></li>
+                              <li><a href="placement.html">Placement</a></li>
+                              <li><a href="Inventory.html">Inventory</a></li>
+                            </ul>
+                          </li>
+                          <li class="dropdown">
+                            <a class="nav-link menu-title" href="javascript:void(0)"><i
+                                data-feather="grid"></i><span>HR</span></a>
+                            <ul class="nav-submenu menu-content">
+                                <li><a href="hr_dashboard.html">Dashboard</a></li>
+                              <li><a href="hr_staff.html">Staff</a></li>
+                               <li><a href="hr_staffSalary.html">Salary Overview</a></li>
+                               <li><a href="hr_leave.html">Staff Leave</a></li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </div>
                     <!-- <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div> -->
                   </div>
                 </nav>
@@ -247,33 +258,6 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-3">
-                                        <label>Amount</label>
-                                        <div class="input-group">
-                                            <input class="form-control" type="number" min="1" placeholder="Amount">
-                                        </div>
-                                    </div>                     
-                                    <div class="col-lg-3">
-                                        <label>Submitted By</label>
-                                        <div class="input-group">
-                                            <select class="form-select digits" id="exampleFormControlSelect9">
-                                                <option disabled selected>Select Submitted by</option>
-                                                <option>John</option>
-                                                <option>Mark</option>
-                                                <option>Jene</option>
-                                              </select>
-                                        </div>
-                                    </div>                     
-                                </div>
-                            </div>
-                            <div class="row mt-2">
-                                <div class="col-lg-12 row">
-                                    <div class="col-lg-3">
-                                        <label>Remarks</label>
-                                        <div class="input-group">
-                                            <input class="form-control" type="te" rows="12" placeholder="Remarks"></textarea>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-3">
                                         <label>Vendor Name</label>
                                         <div class="input-group">
                                             <select class="form-select digits" id="select1" onchange="selectedVendor()">
@@ -285,16 +269,43 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-3">
+                                        <label>Amount</label>
+                                        <div class="input-group">
+                                            <input class="form-control" type="number" min="1" placeholder="Amount">
+                                        </div>
+                                    </div>                     
+                                </div>
+                            </div>
+                            <div class="row mt-2">
+                                <div class="col-lg-12 row">
+                                    <div class="col-lg-3">
+                                        <label>Remarks</label>
+                                        <div class="input-group">
+                                            <textarea class="form-control" type="te" rows="2" placeholder="Remarks">Remarks</textarea>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-3">
                                         <label>Upload Bill</label>
                                         <div class="input-group">
                                             <input class="form-control" type="file">
                                         </div>
                                     </div>
-                                    <div class="card-body mx-4 px-4">
-                                        <div class="row" id="vendorDetails">
-                                            <!-- Vendor details will be dynamically populated here -->
+                                    <div class="col-lg-3">
+                                        <label>Submitted By</label>
+                                        <div class="input-group">
+                                            <select class="form-select digits" id="exampleFormControlSelect9">
+                                                <option disabled selected>Select Submitted by</option>
+                                                <option>John</option>
+                                                <option>Mark</option>
+                                                <option>Jene</option>
+                                              </select>
                                         </div>
-                                    </div>
+                                    </div>                     
+                                    <!-- <div class="card-body mx-4 px-4">
+                                        <div class="row" id="vendorDetails">
+                                            Vendor details will be dynamically populated here
+                                        </div>
+                                    </div> -->
                                     
                                     <div class="col-lg-12 d-flex justify-content-end align-items-end">
                                         <div>
@@ -318,11 +329,14 @@
                         </div>
                         <div class="modal-body">
                             <div class="row my-2"><span class="col-6">Service:</span><span class="col-6">Vendor A</span></div>
-                            <div class="row my-2"><span class="col-6">Approve By:</span><span class="col-6">1234567890</span></div>
-                            <div class="row my-2"><span class="col-6">Amount:</span><span class="col-6">XYZ</span></div>
+                            <div class="row my-2"><span class="col-6">Approve By:</span><span class="col-6">Admin</span></div>
+                            <div class="row my-2"><span class="col-6">Amount:</span><span class="col-6">12000</span></div>
                             <div class="row my-2"><span class="col-6">Submitted By:</span><span class="col-6">ABC</span></div>
-                            <div class="row my-2"><span class="col-6">Remarks:</span><span class="col-6">A123B123C123</span></div>
-                            <div class="row my-2"><span class="col-6">Vendor Name:</span><span class="col-6">123456789012</span></div>
+                            <div class="row my-2"><span class="col-6">Vendor Name:</span><span class="col-6">Ram Sharma</span></div>
+                            <div class="row my-2"><span class="col-6">Department Level Approve Status:</span><span class="col-6">Rejected</span></div>
+                            <div class="row my-2"><span class="col-6">CEO Approve Status:</span><span class="col-6">pending</span></div>
+                            <div class="row my-2"><span class="col-6">Remarks:</span><span class="col-6">--</span></div>
+                            <div class="row my-2"><span class="col-6">Bill:</span><span class="col-6">view Bill(pdf file)</span></div>
                         </div>
                         <div class="modal-footer">
                             <div class="d-flex justify-content-end">
@@ -415,24 +429,22 @@
                                     <thead>
                                         <tr>
                                             <th>Service Name</th>
-                                            <th>Approve By</th>
                                             <th>Amount</th>
+                                            <th>Approve By</th>
                                             <th>Submitted By</th>
                                             <th>Vendor Name</th>
                                             <th>Status</th>
-                                            <th>Remarks</th>
                                             <th>Action</th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         <tr>
                                             <td>Electricity Bill</td>
-                                            <td>Admin A</td>
                                             <td>5000</td>
+                                            <td>Admin A</td>
                                             <td>John</td>
                                             <td>Vendor A</td>
                                             <td>Pending</td>
-                                            <td>-</td>
                                             <td class="d-flex justify-content-center icon">
                                                 <i class="icondt fa fa-pencil" title="Edit Bill" onclick="myFunction()"></i>
                                                 <i class="icondt fa-regular fa-eye" data-bs-toggle="modal"
@@ -441,12 +453,11 @@
                                         </tr>
                                         <tr>
                                             <td>Groccery Bill</td>
-                                            <td>Admin B</td>
                                             <td>1200</td>
+                                            <td>Admin B</td>
                                             <td>Mark</td>
                                             <td>Vendor B</td>
                                             <td>Approved</td>
-                                            <td>Online food order</td>
                                             <td class="d-flex justify-content-center icon">
                                                 <i class="icondt fa fa-pencil" title="Edit Bill" onclick="myFunction()"></i>
                                                 <i class="icondt fa-regular fa-eye" data-bs-toggle="modal"
