--- a/placement.html
+++ b/placement.html
@@ -265,6 +265,7 @@
                       <li><a href="category.html">Category</a></li>
                       <li><a href="career.html">Career</a></li>
                       <li><a href="postion.html">Position</a></li>
+                      <li><a href="stock.html">Stock</a></li>
                     </ul>
                   </li>
                   <li class="dropdown">
@@ -287,9 +288,19 @@
                       <li><a href="tot.html">TOT</a></li>
                       <li><a href="accreditation.html">accreditation</a></li>
                       <li><a href="placement.html">Placement</a></li>
+                      <li><a href="Inventory.html">Inventory</a></li>
                     </ul>
                   </li>
-  
+                  <li class="dropdown">
+                    <a class="nav-link menu-title" href="javascript:void(0)"><i
+                        data-feather="grid"></i><span>HR</span></a>
+                    <ul class="nav-submenu menu-content">
+                        <li><a href="hr_dashboard.html">Dashboard</a></li>
+                      <li><a href="hr_staff.html">Staff</a></li>
+                       <li><a href="hr_staffSalary.html">Salary Overview</a></li>
+                       <li><a href="hr_leave.html">Staff Leave</a></li>
+                    </ul>
+                  </li>
                 </ul>
               </div>
               <!-- <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div> -->
@@ -439,11 +450,9 @@
                           <th>Name</th>
                           <th>Mobile No.</th>
                           <th>Course Interested</th>
-                          <th>Batch</th>
+                          <th>Batch Id</th>
                           <th>Center Name</th>
                           <th>Status</th>
-                          <th>Reference</th>
-                          <th>Total Working Days</th>
                           <th>Action</th>
                         </tr>
                       </thead>
@@ -452,11 +461,9 @@
                           <td>John Doe</td>
                           <td>1234567890</td>
                           <td>Java</td>
+                          <td>5</td>
                           <td>Ahmedabad</td>
-                          <td>Abc</td>
                           <td>Certified</td>
-                          <td>No</td>
-                          <td>58</td>
                           <td class="d-flex justify-content-center icon">
                             <i
                               class="icondt text-primary fa-regular fa-plus"
@@ -478,11 +485,9 @@
                           <td>Arthur</td>
                           <td>087654321</td>
                           <td>Angular</td>
+                          <td>5</td>
                           <td>Modasa</td>
-                          <td>xyz</td>
                           <td>Certified</td>
-                          <td>aasd</td>
-                          <td>45</td>
                           <td class="d-flex justify-content-center icon">
                             <i
                               class="icondt text-primary fa-regular fa-plus"
@@ -504,10 +509,8 @@
                           <td>Jane Smith</td>
                           <td>1122334455</td>
                           <td>React</td>
+                          <td>2</td>
                           <td>Baroda</td>
-                          <td>def</td>
-                          <td>Certified</td>
-                          <td>Yes</td>
                           <td>-</td>
                           <td class="d-flex justify-content-center icon">
                             <i
@@ -530,10 +533,8 @@
                           <td>Emily Clark</td>
                           <td>9988776655</td>
                           <td>Python</td>
-                          <td>Surat</td>
-                          <td>ghi</td>
-                          <td>Certified</td>
-                          <td>No</td>
+                          <td>1</td>
+                          <td>center-2</td>
                           <td>-</td>
                           <td class="d-flex justify-content-center icon">
                             <i
