--- a/statusList.html
+++ b/statusList.html
@@ -263,6 +263,7 @@
                       <li><a href="category.html">Category</a></li>
                       <li><a href="career.html">Career</a></li>
                       <li><a href="postion.html">Position</a></li>
+                      <li><a href="stock.html">Stock</a></li>
                     </ul>
                   </li>
                   <li class="dropdown">
@@ -285,9 +286,19 @@
                       <li><a href="tot.html">TOT</a></li>
                       <li><a href="accreditation.html">accreditation</a></li>
                       <li><a href="placement.html">Placement</a></li>
+                      <li><a href="Inventory.html">Inventory</a></li>
                     </ul>
                   </li>
-  
+                  <li class="dropdown">
+                    <a class="nav-link menu-title" href="javascript:void(0)"><i
+                        data-feather="grid"></i><span>HR</span></a>
+                    <ul class="nav-submenu menu-content">
+                        <li><a href="hr_dashboard.html">Dashboard</a></li>
+                      <li><a href="hr_staff.html">Staff</a></li>
+                       <li><a href="hr_staffSalary.html">Salary Overview</a></li>
+                       <li><a href="hr_leave.html">Staff Leave</a></li>
+                    </ul>
+                  </li>
                 </ul>
               </div>
               <!-- <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div> -->
@@ -526,9 +537,9 @@
                     <thead>
                       <tr>
                         <th>Name</th>
-                        <th>Mobile No.</th>
+                        <th>Contact No.</th>
                         <th>Course Interested</th>
-                        <th>Batch</th>
+                        <th>Batch ID</th>
                         <th>Center Name</th>
                         <th>Status</th>
                         <th>Reference</th>
@@ -540,7 +551,7 @@
                         <td>John Doe</td>
                         <td>1234567890</td>
                         <td>Java</td>
-                        <td>Ahmedabad</td>
+                        <td>2</td>
                         <td>Abc</td>
                         <td>Certified</td>
                         <td>no</td>
@@ -565,7 +576,7 @@
                         <td>Arthur</td>
                         <td>087654321</td>
                         <td>Angular</td>
-                        <td>Modasa</td>
+                        <td>1</td>
                         <td>xyz</td>
                         <td>Not Certified</td>
                         <td>aasd</td>
