--- a/addPlacement.html
+++ b/addPlacement.html
@@ -276,6 +276,7 @@
                                 <li><a href="category.html">Category</a></li>
                                 <li><a href="career.html">Career</a></li>
                                 <li><a href="postion.html">Position</a></li>
+                                <li><a href="stock.html">Stock</a></li>
                               </ul>
                             </li>
                             <li class="dropdown">
@@ -298,9 +299,19 @@
                                 <li><a href="tot.html">TOT</a></li>
                                 <li><a href="accreditation.html">accreditation</a></li>
                                 <li><a href="placement.html">Placement</a></li>
+                                <li><a href="Inventory.html">Inventory</a></li>
                               </ul>
                             </li>
-            
+                            <li class="dropdown">
+                              <a class="nav-link menu-title" href="javascript:void(0)"><i
+                                  data-feather="grid"></i><span>HR</span></a>
+                              <ul class="nav-submenu menu-content">
+                                  <li><a href="hr_dashboard.html">Dashboard</a></li>
+                                <li><a href="hr_staff.html">Staff</a></li>
+                                 <li><a href="hr_staffSalary.html">Salary Overview</a></li>
+                                 <li><a href="hr_leave.html">Staff Leave</a></li>
+                              </ul>
+                            </li>
                           </ul>
                         </div>
                         <!-- <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div> -->
