--- a/attedance.html
+++ b/attedance.html
@@ -159,59 +159,70 @@
                   <div class="main-navbar">
                     <!-- <div class="left-arrow" id="left-arrow"><i data-feather="arrow-left"></i></div> -->
                     <div id="mainnav">
-                      <ul class="nav-menu custom-scrollbar">
-                        <li class="back-btn">
-                          <div class="mobile-back text-end">
-                            <span>Back</span><i class="fa fa-angle-right ps-2" aria-hidden="true"></i>
-                          </div>
-                        </li>
-                        <li class="dropdown">
-                          <a class="nav-link menu-title" href="javascript:void(0)"><i
-                              data-feather="home"></i><span>Candidate</span></a>
-                          <ul class="nav-submenu menu-content">
-                            <li><a href="dashboard.html">Inquiry</a></li>
-                            <li><a href="batchCreation.html">Batch Creation</a></li>
-                            <li><a href="batchList.html">Batch List</a></li>
-                            <li><a href="statusList.html">Candidate</a></li>
-                            <li><a href="attedance.html">Attendance</a></li>
-                          </ul>
-                        </li>
-                        <li class="dropdown">
-                          <a class="nav-link menu-title" href="javascript:void(0)"><i
-                              data-feather="user"></i><span>Master</span></a>
-                          <ul class="nav-submenu menu-content">
-                            <li><a href="center.html">Center</a></l i>
-                            <li><a href="course.html">Course</a></li>
-                            <li><a href="category.html">Category</a></li>
-                            <li><a href="career.html">Career</a></li>
-                            <li><a href="postion.html">Position</a></li>
-                          </ul>
-                        </li>
-                        <li class="dropdown">
-                          <a class="nav-link menu-title" href="javascript:void(0)"><i
-                              data-feather="user"></i><span>Account</span></a>
-                          <ul class="nav-submenu menu-content">
-                            <li><a href="vendor.html">Vendor</a></l i>
-                            <li><a href="bill.html">Bill</a></li>
-                            <li><a href="billApprove.html">Bill Approve</a></li>
-                            <li><a href="statistics.html">statistics</a></li>
-                            <li><a href="class.html">Class</a></li>
-                            <li><a href="hostel.html">Hostel</a></li>
-                          </ul>
-                        </li>
-                        <li class="dropdown">
-                          <a class="nav-link menu-title" href="javascript:void(0)"><i
-                              data-feather="grid"></i><span>Other</span></a>
-                          <ul class="nav-submenu menu-content">
-                            <li><a href="staff.html">Staff</a></li>
-                            <li><a href="tot.html">TOT</a></li>
-                            <li><a href="accreditation.html">accreditation</a></li>
-                            <li><a href="placement.html">Placement</a></li>
-                          </ul>
-                        </li>
-        
-                      </ul>
-                    </div>
+                        <ul class="nav-menu custom-scrollbar">
+                          <li class="back-btn">
+                            <div class="mobile-back text-end">
+                              <span>Back</span><i class="fa fa-angle-right ps-2" aria-hidden="true"></i>
+                            </div>
+                          </li>
+                          <li class="dropdown">
+                            <a class="nav-link menu-title" href="javascript:void(0)"><i
+                                data-feather="home"></i><span>Candidate</span></a>
+                            <ul class="nav-submenu menu-content">
+                              <li><a href="dashboard.html">Inquiry</a></li>
+                              <li><a href="batchCreation.html">Batch Creation</a></li>
+                              <li><a href="batchList.html">Batch List</a></li>
+                              <li><a href="statusList.html">Candidate</a></li>
+                              <li><a href="attedance.html">Attendance</a></li>
+                            </ul>
+                          </li>
+                          <li class="dropdown">
+                            <a class="nav-link menu-title" href="javascript:void(0)"><i
+                                data-feather="user"></i><span>Master</span></a>
+                            <ul class="nav-submenu menu-content">
+                              <li><a href="center.html">Center</a></l i>
+                              <li><a href="course.html">Course</a></li>
+                              <li><a href="category.html">Category</a></li>
+                              <li><a href="career.html">Career</a></li>
+                              <li><a href="postion.html">Position</a></li>
+                              <li><a href="stock.html">Stock</a></li>
+                            </ul>
+                          </li>
+                          <li class="dropdown">
+                            <a class="nav-link menu-title" href="javascript:void(0)"><i
+                                data-feather="user"></i><span>Account</span></a>
+                            <ul class="nav-submenu menu-content">
+                              <li><a href="vendor.html">Vendor</a></l i>
+                              <li><a href="bill.html">Bill</a></li>
+                              <li><a href="billApprove.html">Bill Approve</a></li>
+                              <li><a href="statistics.html">statistics</a></li>
+                              <li><a href="class.html">Class</a></li>
+                              <li><a href="hostel.html">Hostel</a></li>
+                            </ul>
+                          </li>
+                          <li class="dropdown">
+                            <a class="nav-link menu-title" href="javascript:void(0)"><i
+                                data-feather="grid"></i><span>Other</span></a>
+                            <ul class="nav-submenu menu-content">
+                              <li><a href="staff.html">Staff</a></li>
+                              <li><a href="tot.html">TOT</a></li>
+                              <li><a href="accreditation.html">accreditation</a></li>
+                              <li><a href="placement.html">Placement</a></li>
+                              <li><a href="Inventory.html">Inventory</a></li>
+                            </ul>
+                          </li>
+                          <li class="dropdown">
+                            <a class="nav-link menu-title" href="javascript:void(0)"><i
+                                data-feather="grid"></i><span>HR</span></a>
+                            <ul class="nav-submenu menu-content">
+                                <li><a href="hr_dashboard.html">Dashboard</a></li>
+                              <li><a href="hr_staff.html">Staff</a></li>
+                               <li><a href="hr_staffSalary.html">Salary Overview</a></li>
+                               <li><a href="hr_leave.html">Staff Leave</a></li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </div>
                     <!-- <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div> -->
                   </div>
                 </nav>
@@ -314,7 +325,12 @@
                                 <h3 class="f-w-600">Attendance</h3>
                             </div>
                             <div class="col-6">
-                                <div class="breadcrumb-sec">
+                                <div class="col-12 d-flex align-items-end justify-content-end ">
+                                    <a href="batchList.html" class="text-white">
+                                        <button class="btn btn-pill btn-warning mx-2 mb-4" type="button">Import</button>
+                                    </a>
+                                </div>
+                                <!-- <div class="breadcrumb-sec">
                                     <ul class="breadcrumb">
                                         <li class="breadcrumb-item">
                                             <a href="dashboard.html"><i data-feather="home"></i></a>
@@ -322,7 +338,7 @@
                                         <li class="breadcrumb-item">Candidate</li>
                                         <li class="breadcrumb-item active">Attendance</li>
                                     </ul>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
