--- a/hostel.html
+++ b/hostel.html
@@ -162,6 +162,7 @@
                     <li><a href="category.html">Category</a></li>
                     <li><a href="career.html">Career</a></li>
                     <li><a href="postion.html">Position</a></li>
+                    <li><a href="stock.html">Stock</a></li>
                   </ul>
                 </li>
                 <li class="dropdown">
@@ -184,9 +185,19 @@
                     <li><a href="tot.html">TOT</a></li>
                     <li><a href="accreditation.html">accreditation</a></li>
                     <li><a href="placement.html">Placement</a></li>
+                    <li><a href="Inventory.html">Inventory</a></li>
                   </ul>
                 </li>
-
+                <li class="dropdown">
+                  <a class="nav-link menu-title" href="javascript:void(0)"><i
+                      data-feather="grid"></i><span>HR</span></a>
+                  <ul class="nav-submenu menu-content">
+                      <li><a href="hr_dashboard.html">Dashboard</a></li>
+                    <li><a href="hr_staff.html">Staff</a></li>
+                     <li><a href="hr_staffSalary.html">Salary Overview</a></li>
+                     <li><a href="hr_leave.html">Staff Leave</a></li>
+                  </ul>
+                </li>
               </ul>
             </div>
             <!-- <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div> -->
@@ -229,7 +240,7 @@
                     <div class="col-lg-6">
                       <label>Batch Id</label>
                       <select class="form-select digits" id="candidateSelect" disabled>
-                        <option selected>BATCH/5960/11/2023</option>
+                        <option selected>1</option>
                       </select>
                     </div>
                     <div class="col-lg-6 ">
@@ -304,7 +315,7 @@
                     <div class="col-lg-6">
                       <label>Batch Id</label>
                       <select class="form-select digits" id="candidateSelect" disabled>
-                        <option selected>BATCH/5960/11/2023</option>
+                        <option selected>2</option>
                       </select>
                     </div>
                     <div class="col-lg-6 ">
@@ -390,12 +401,12 @@
                     <tr>
                       <td>Jamshedpur Center</td>
                       <td>Automotive AC Technician</td>
-                      <td>BATCH/5960/11/2023</td>
+                      <td>1</td>
                       <td>01-01-2021</td>
                       <td>29-02-2021</td>
                       <td>59</td>
                       <td class="d-flex justify-content-center icon">
-                        <i class="icondt fa-regular fa-plus" onclick="myFunction()"  title="Add"></i>
+                        <i class="icondt fa-regular fa-plus"  title="Add"></i>
                         <i class="icondt text-success fa fa-eye" data-bs-toggle="modal"  data-original-title="test"
                           data-bs-target="#exampleModal" onclick="viewHostel()" title="View">
                         </i>
@@ -404,7 +415,7 @@
                     <tr>
                       <td>Jamshedpur Center</td>
                       <td>Automotive AC Technician</td>
-                      <td>BATCH/5968/11/2021</td>
+                      <td>2</td>
                       <td>01-01-2021</td>
                       <td>29-02-2021</td>
                       <td>59</td>
