--- a/hr_staffProfile.html
+++ b/hr_staffProfile.html
@@ -463,12 +463,6 @@
                                                                 </div>
                                                                 <div class="col-sm-3 mb-3">
                                                                     <div>
-                                                                        <span class="text-secondary">PAN</span><br>
-                                                                        <span class="f-w-600">D</span>
-                                                                    </div>
-                                                                </div>
-                                                                <div class="col-sm-3 mb-3">
-                                                                    <div>
                                                                         <span class="text-secondary">Holiday Template</span><br>
                                                                         <span class="f-w-600">Holiday</span>
                                                                     </div>
@@ -714,7 +708,7 @@
                                                                     <div>
                                                                         <span class="text-secondary">Date Of
                                                                             Joining</span><br>
-                                                                        <span class="f-w-600">Electronics</span>
+                                                                        <span class="f-w-600">01/01/2024</span>
                                                                     </div>
                                                                 </div>
                                                                 <div class="col-sm-3 mb-3">
@@ -726,14 +720,14 @@
                                                                 <div class="col-sm-3 mb-3">
                                                                     <div>
                                                                         <span class="text-secondary">PAN</span><br>
-                                                                        <span class="f-w-600">D</span>
+                                                                        <span class="f-w-600">FCJ12345FJ</span>
                                                                     </div>
                                                                 </div>
                                                                 <div class="col-sm-3 mb-3">
                                                                     <div>
                                                                         <span class="text-secondary">Aadhar
                                                                             Number</span><br>
-                                                                        <span class="f-w-600">Electronics Trainer</span>
+                                                                        <span class="f-w-600">123456789009</span>
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -765,29 +759,28 @@
                                                                     <div>
                                                                         <span class="text-secondary">Name of
                                                                             Bank</span><br>
-                                                                        <span class="f-w-600">Msc. Electronics</span>
+                                                                        <span class="f-w-600">SBI</span>
                                                                     </div>
                                                                 </div>
                                                                 <div class="col-sm-3 mb-3">
                                                                     <div>
                                                                         <span class="text-secondary">IFSC
                                                                             Code</span><br>
-                                                                        <span class="f-w-600">Karnavati
-                                                                            University</span>
+                                                                        <span class="f-w-600">SBIN0123</span>
                                                                     </div>
                                                                 </div>
                                                                 <div class="col-sm-3 mb-3">
                                                                     <div>
                                                                         <span class="text-secondary">Account
                                                                             Number</span><br>
-                                                                        <span class="f-w-600">Electronics</span>
+                                                                        <span class="f-w-600">12345678908</span>
                                                                     </div>
                                                                 </div>
                                                                 <div class="col-sm-3 mb-3">
                                                                     <div>
                                                                         <span class="text-secondary">Name of Account
                                                                             Holder</span><br>
-                                                                        <span class="f-w-600">--</span>
+                                                                        <span class="f-w-600">Ankit </span>
                                                                     </div>
                                                                 </div>
                                                             </div>
